app/assets/stylesheets/main.css.scss
// Place all the styles related to the main controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import "bootstrap";

/* Universal Styles */
html {
	overflow-y: scroll;
	overflow-x: hidden;
}

body {
	padding-top: 0px;
	background: url('http://f.cl.ly/items/291Z1K371I0U083A3o03/sf_bg.png') no-repeat;
	background-size: 100%;
}

section {
	overflow: auto;
}

textarea {
	resize: vertical;
}

.center {
	text-align: center;
}

.center h1 {
	margin-bottom: 10px;
}

/* Typography */
h1, h2, h3, h4, h5, h6 {
	line-height: 1;
}

h1 {
	font-size: 3em;
	letter-spacing: -2px;
	margin-bottom: 30px;
	text-align: center;
}

h2 {
	font-size: 1.7em;
	letter-spacing: -1px;
	margin-bottom: 	30px;
	font-weight: 600;
}

p {
	font-size: 1.1em;
	line-height: 1.7em;	
}

/* Header */
.navbar-inner {
	border-radius: 1px !important;
	-webkit-border-radius: 1px !important;
	-moz-border-radius: 1px !important;
}

#logo {
	float: left;
	text-shadow: 0px 0px 1px #676767;
	margin-right: 10px;
	font-size: 1.6em;
	color: #000;
	text-transform: uppercase;
	letter-spacing: -1px;
	padding-top: 10px;
	font-weight: 800;
	line-height: 1;
}

/* Footer */
#footer {
	position: fixed;
	bottom: 0px;
	background: #3D3D3D;
	padding-top: 10px;
	height: 50px;
	text-indent: 20px;
	width: 100%;
	z-index:99999;
}

.muted {
	margin-top: 10px;
	position: absolute;
	right: 15px;
	color: #B6B6B6
}

.breadcrumb {
	position: absolute;
	left: 15px;
	background: inherit;
	margin-top: 5px;
}

.breadcrumb a {
	color: #B6B6B6;
}

.breadcrumb a:hover {
	color: #08C;
}

.breadcrumb li {
	text-shadow: 0px 0px 0px;
}

/* Hero Unit */
.hero-unit {
	background: #D8D8D8;
}

/* Carousel */

#carousel-container {
	width: 700px;
}
	#myCarousel {
	  margin-top: 0px;
	}

	.carousel-linked-nav,
	.item img {
	  display: block; 
	  margin: 0 auto;
	}

	.pagination a {
	  display: inline-block;
	  background: #696969;
	  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0    rgba(0, 0, 0, 0.1);
	  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0,  0, 0, 0.1);
	  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
	  border-radius: 15px;
	  height: 11px;
	  width: 11px;
	  display: block;
	  text-indent: -1000px;
	  float: left;
	  margin-right: 7px;
	  cursor: pointer;
	  padding: 0px !important;
	  border: 0px solid !important;
	}

	.pagination li:first-child a {
	    border-left-width: 0px !important;
	    -webkit-border-radius: 11px !important;
	    -moz-border-radius: 11px !important;
	    border-radius: 11px !important;
	}

	.pagination li:last-child a {
	    border-left-width: 0px !important;
	    -webkit-border-radius: 11px !important;
	    -moz-border-radius: 11px !important;
	    border-radius: 11px !important;
	}

	.carousel-linked-nav {
	    width: 0px !important;
	    display: table-cell;
	    vertical-align: middle;
	    margin-bottom: 0px !important;
	    position: relative;
	    left: 432px;
	    height: 25px;
	    bottom: 15px;
	}

